--- a/app/views/tweets/show.erb
+++ b/app/views/tweets/show.erb
@@ -2,9 +2,9 @@
 <p><%=@tweet.content%></p>
 <form method="post" action="tweets/<%=@tweet.id%>/delete">
   <input id="hidden" name="_method" value="delete">
-  <input type="submit" id="delete" value="Delete Tweet">
+  <input type="submit" id="Delete Tweet " value="Delete Tweet">
 </form>
 <form method="post" action="tweets/<%=@tweet.id%>/edit">
   <input id="hidden" name="_method" value="patch">
-  <input type="submit" id="delete" value="Edit Tweet">
+  <input type="submit" id="Edit Tweet" value="Edit Tweet">
 </form>
