--- a/app/views/tweets/show.erb
+++ b/app/views/tweets/show.erb
@@ -1,6 +1,6 @@
 <h2>Tweet #<%=@tweet.id%></h2>
 <p><%=@tweet.content%></p>
-<form method="post" action="tweets/<%=@tweet.id%>/delete">
+<form method="post" action="/tweets/<%=@tweet.id%>/delete">
   <input id="hidden" type="hidden" name="_method" value="delete">
   <input type="submit" value="Delete Tweet">
 </form>
