Automatically backed up by Learn

--- a/app/views/tweets/edit.erb
+++ b/app/views/tweets/edit.erb
@@ -1,4 +1,5 @@
 <form action='/tweets' method="post">
+  <input id="hidden" type="hidden" name="_method" value="patch">
   Edit Tweet #<%=@tweet.id%>
   Content:
   <input type="text" name="content" value="<%=@tweet.content%>"><br>
